fix: remove use of commons-io in dev-server
Remove the usage of commons-io
in vaadin-dev-server module as
it is not required and has been
comming from transitive dependency.

Fixes #22858